--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
     "vue2-smooth-scroll": "^1.5.0"
   },
   "devDependencies": {
